[package]
name = "n-body"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
getrandom = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["Window", "Performance", "Document", "HtmlElement"] }
getrandom = { version = "0.2", features = ["js"] }
